<resources>
    <string name="app_name">MAD GovQueue</string>

    <!-- Home Screen -->
    <string name="default_location">New Delhi, India</string>
    <string name="hint_search_home">Search departments or services&#8230;</string>
    <string name="heading_nearby_offices">Nearby Government Offices</string>
    <string name="btn_view_details">View Details</string>
    <string name="section_office_info">Office Information</string>
    <string name="label_address">Address</string>
    <string name="label_opening_hours">Opening Hours</string>
    <string name="section_current_crowd">Current Crowd</string>
    <string name="label_estimated_wait">Estimated Wait</string>
    <string name="section_queue">Queue</string>
    <string name="label_people_waiting">People Waiting</string>
    <string name="btn_get_directions">Get Directions</string>
    <string name="btn_report_crowd">Report Crowd</string>
    <string name="nav_profile">Profile</string>
    <string name="menu_my_reports">My Reports</string>
    <string name="menu_language">Language</string>
    <string name="menu_help_support">Help &amp; Support</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="btn_logout">Logout</string>
    <string name="home">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_offices">Offices</string>
    <string name="nav_reports">Reports</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="crowd_status">Crowd status</string>

</resources>
